force-app/main/default/objects/ProjectMgmt__c/ProjectMgmt__c.object-meta.xml
<CustomObject>
    <label>프로젝트 관리</label>
    <nameField>
        <label>항목명</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>