force-app/main/default/objects/ProjectMgmt__c/fields/ActualDate__c.field-meta.xml
<CustomField>
    <fullName>ActualDate__c</fullName>
    <label>실제공수</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>