force-app/main/default/objects/ProjectMgmt__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>상세내용</label>
    <type>TextArea</type>
</CustomField>