force-app/main/default/objects/ProjectMgmt__c/fields/DevEndDate__c.field-meta.xml
<CustomField>
    <fullName>DevEndDate__c</fullName>
    <label>구현종료일</label>
    <type>Date</type>
</CustomField>