force-app/main/default/objects/ProjectMgmt__c/fields/DevStartDate__c.field-meta.xml
<CustomField>
    <fullName>DevStartDate__c</fullName>
    <label>구현시작일</label>
    <type>Date</type>
</CustomField>