force-app/main/default/objects/ProjectMgmt__c/fields/ExpectedDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedDate__c</fullName>
    <label>예상공수</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>