force-app/main/default/objects/ProjectMgmt__c/fields/ITServiceRequest__c.field-meta.xml
<CustomField>
    <fullName>ITServiceRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM 서비스 요청</label>
    <referenceTo>ITServiceRequest__c</referenceTo>
    <relationshipLabel>프로젝트 관리</relationshipLabel>
    <relationshipName>ProjectMgmt</relationshipName>
    <type>Lookup</type>
</CustomField>