force-app/main/default/objects/ProjectMgmt__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>진행상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>접수</fullName>
            </value>
            <value>
                <fullName>분석</fullName>
            </value>
            <value>
                <fullName>설계</fullName>
            </value>
            <value>
                <fullName>우선순위 판단</fullName>
            </value>
            <value>
                <fullName>구현</fullName>
            </value>
            <value>
                <fullName>테스트</fullName>
            </value>
            <value>
                <fullName>완료</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>